--- a/Block_EnginInt4.html
+++ b/Block_EnginInt4.html
@@ -42,7 +42,7 @@
 
         <div class="enginint4-right">
             <div class="enginint4-empty-line-with-img">
-              <img src="media/InonaObrabaciehoStroja.jpeg" alt="Ikona obrabacieho stroja">
+              <img src="media/IkonaObrabaciehoStroja.png" alt="Ikona obrabacieho stroja">
             </div>
               <h3 lang-code="01401">Interná konštrukcia</h3>
               <p>
