--- a/Block_Kontakt1.html
+++ b/Block_Kontakt1.html
@@ -77,7 +77,7 @@
             <div class="kontakt1-form-checkbox">
               <input type="checkbox" id="id-kontakt1-suhlas" required />
               <label for="id-kontakt1-suhlas">
-                  <a href="#" lang-code="05017">Súhlasím so spracovaním mojich osobných údajov</a>
+                  <a href="#" lang-code="05017">Súhlasím so spracovaním mojich osobných údajov za účelom spätnej väzby na Vašu správu.</a>
               </label>
             </div>
 
@@ -87,7 +87,7 @@
               <div class="kontakt1-spinner" id="id-kontakt1-spinner"></div>
             </div>
 
-            <div class="kontakt1-from-checkbox">
+            <div class="kontakt1-form-checkbox">
               <button type="submit" class="kontakt1-submit-btn" lang-code="05019">SEND MESSAGE</button>
             </div>
           </form>
