--- a/Block_Ref.html
+++ b/Block_Ref.html
@@ -19,7 +19,7 @@
   <div id="Ref-div-src">
     <div id="id-Block_Ref"></div>
     <div class="ref-body">
-      <h1 class="ref-popis" lang-code="07002">.Referencie hovoria za nás</h1>
+      <h1 class="ref-popis" id="id_refMenu" style="scroll-margin-top: 80px;" lang-code="07002">.Referencie hovoria za nás</h1>
       <p class="ref-popis" lang-code="07003">
         .Od vzniku sa nám podarilo nadviazať dlhodobú spoluprácu s viac ako 30 zákazníkmi z rôznych krajín sveta.
       </p>
@@ -50,7 +50,8 @@
             <a href="#id-Block_Ref1" class="ref-button" lang-code="07019">Viac</a>
           </div>
           <div class="ref-p2">
-            <img src="media/airplane-sky.avif" alt="Letecký priemysel" />
+            <img src="media/ai-generated-commercial-airplane-flying-through-the-clouds.avif" alt="Letecký priemysel" />
+            <!-- <img src="media/airplane-sky.avif" alt="Letecký priemysel" /> -->
             <div class="ref-triangle"></div>
           </div>
         </div>
