--- a/Block_Ref4.html
+++ b/Block_Ref4.html
@@ -34,173 +34,190 @@
 	<div id="Ref4-div-src">
 		<div id="id-Block_Ref4" style="scroll-margin-top: 80px;"></div>
 		<div class="ref4-body">
-			<div class="ref4-animate-line"></div>
 			<div class="ref4-header">
 				<div class="ref4-line-with-img">
-					<h2 lang-code="07015">.IT oblasť</h2>
+					<div>
+						<h2 lang-code="07015">.IT oblasť</h2>
+						<p lang-code="07016">.Automatizácia procesov, monitoring, a správa dát</p>
+					</div>
 					<img src="media/computer-icon.png" alt="Ikona pocitaca">
 				</div>
-				<p lang-code="07016">.Automatizácia procesov, monitoring, a správa dát</p>
 			</div>
-			<div class="ref-ovl-grid">
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/active-solution-logo-enitech.png" alt="Active Solution logo"
-							class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>vývoj softwaru pre rôzne oblasti</p>
+			<div class="ref4-animate-line"></div>
+
+			<div class="ref4-content-flex">
+				<!-- ************************************************************************ -->
+				<div class="ref4-right">
+					<div class="ref-ovl-grid columns-3">
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/active-solution-logo-enitech.png" alt="Active Solution logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>vývoj softwaru pre rôzne oblasti</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">Active Solution</div>
+							</div>
+						</div>
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/agrarmarkt-logo-transp.png" alt="Agrarmarkt logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>Software pre poľnohospodárske odvetvie</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">Agrarmarkt</div>
+							</div>
+						</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/atos-logo-enitech.png" alt="Atos logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>software pre riadenie výroby mikročipov</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">Atos</div>
+							</div>
+						</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/autodesk-logo-transp.png" alt="Autodesk logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>3D modeling software</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">Autodesk INVENTOR</div>
+							</div>
+						</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/brz-logo-enitech.png" alt="BRZ logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>vývoj softwaru pre Rakúsku štátnu správu</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">BRZ - Bundesrechenzentrum</div>
+							</div>
+						</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/cellent-logo-transp.png" alt="CELLENT logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>software v oblasti bankovníctva</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">CELLENT</div>
+							</div>
+						</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/erste-logo-transp.png" alt="Erste logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>software v oblasti bankovníctva</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">Erste</div>
+							</div>
+						</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/ferchau-logo-transp.png" alt="Ferchau logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>software v oblasti strojárenstva</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">Ferchau</div>
+							</div>
+						</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/kuka-logo-enitech.png" alt="KUKA logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>robotické systémy</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">KUKA</div>
+							</div>
+						</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/raiffeisen-bank-logo-enitech.png" alt="Reiffeisen logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>software v oblasti bankovníctva</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">Reiffeisen</div>
+							</div>
+						</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/tenovis-logo-transp.png" alt="Tenovis logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>software v oblasti telekomunikácií</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">Tenovis</div>
+							</div>
+						</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/unisys-logo-transp.png" alt="Unisys logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>Technologické riešenia</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">Unisys</div>
+							</div>
 						</div>
 					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">Active Solution</div>
+					<div style="text-align: right;">
+						<a href="#id_refMenu" lang-code="07020">Späť k menu</a>
 					</div>
 				</div>
 
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/agrarmarkt-logo-transp.png" alt="Agrarmarkt logo"
-							class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>Software pre poľnohospodárske odvetvie</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">Agrarmarkt</div>
+				<div class="ref4-divider"></div>
+
+				<div class="ref4-left">
+					<div class="ref4-left-group ">
+						<img src="media/quantum-computer-technologies-illustration.avif" class="ref4-img1" />
+						<!-- <img src="media/KonstrukciaObdlznikova.png" class="ref4-img2" /> -->
 					</div>
 				</div>
 
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/atos-logo-enitech.png" alt="Atos logo" class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>software pre automobilový priemysel</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">Atos</div>
-					</div>
-				</div>
-
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/autodesk-logo-transp.png" alt="Autodesk logo" class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>3D modeling software</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">Autodesk INVENTOR</div>
-					</div>
-				</div>
-
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/brz-logo-enitech.png" alt="BRZ logo" class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>vývoj softwaru pre Rakúsku štátnu správu</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">BRZ - Bundesrechenzentrum</div>
-					</div>
-				</div>
-
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/cellent-logo-transp.png" alt="CELLENT logo" class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>software v oblasti bankovníctva</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">CELLENT</div>
-					</div>
-				</div>
-
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/erste-logo-transp.png" alt="Erste logo" class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>software v oblasti bankovníctva</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">Erste</div>
-					</div>
-				</div>
-
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/ferchau-logo-transp.png" alt="Ferchau logo" class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>software v oblasti strojárenstva</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">Ferchau</div>
-					</div>
-				</div>
-
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/kuka-logo-enitech.png" alt="KUKA logo" class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>robotické systémy</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">KUKA</div>
-					</div>
-				</div>
-
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/raiffeisen-bank-logo-enitech.png" alt="Reiffeisen logo"
-							class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>software v oblasti bankovníctva</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">Reiffeisen</div>
-					</div>
-				</div>
-
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/tenovis-logo-transp.png" alt="Tenovis logo" class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>software v oblasti telekomunikácií</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">Tenovis</div>
-					</div>
-				</div>
-
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/unisys-logo-transp.png" alt="Unisys logo" class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>Technologické riešenia</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">Unisys</div>
-					</div>
-				</div>
 			</div>
 		</div>
 	</div>
