--- a/Block_Ref2.html
+++ b/Block_Ref2.html
@@ -34,41 +34,61 @@
 	<div id="Ref2-div-src">
 		<div id="id-Block_Ref2" style="scroll-margin-top: 80px;"></div>
 		<div class="ref2-body">
-			<div class="ref2-animate-line"></div>
 			<div class="ref2-header">
-				<div class="ref4-line-with-img">
-					<h2 lang-code="07011">.Letecký priemysel</h2>
+				<div class="ref2-line-with-img">
+					<div>
+						<h2 lang-code="07011">.Letecký priemysel</h2>
+						<p lang-code="07012">.Vývoj a integrácia systémov pre letecký priemysel</p>
+					</div>
 					<img src="media/Lietadielko.png" alt="Ikona lietadla">
 				</div>
-				<p lang-code="07012">.Vývoj a integrácia systémov pre letecký priemysel</p>
 			</div>
-			<div class="ref-ovl-grid">
-				<!-- 1. stvorica -->
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/airbus-logo-enitech.png" alt="Airbus logo" class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>interiérové komponenty lietadiel</p>
+			<div class="ref2-animate-line"></div>
+
+			<div class="ref2-content-flex">
+				<!-- ************************************************************************ -->
+				<div class="ref2-right">
+					<div class="ref-ovl-grid columns-3">
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/airbus-logo-enitech.png" alt="Airbus logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>interiérové komponenty lietadiel</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">AIRBUS</div>
+							</div>
 						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">AIRBUS</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/siemens-logo-enitech.png" alt="SIEMENS logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>software pre letecký a kozmický priemysel </p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">SIEMENS</div>
+							</div>
+						</div>
 					</div>
 				</div>
 
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/siemens-logo-enitech.png" alt="SIEMENS logo" class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>software pre letecký a kozmický priemysel </p>
-						</div>
+				<div class="ref2-divider"></div>
+
+				<div class="ref2-left">
+					<div class="ref2-left-group ">
+						<img src="media/Aeroplan-spredu.avif" class="ref2-img1" />
+						<!-- <img src="media/ai-generated-commercial-airplane-flying-through-the-clouds.avif" class="ref2-img1" /> -->
 					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">SIEMENS</div>
+					<div style="text-align: right;">
+						<a href="#id_refMenu" lang-code="07020">Späť k menu</a>
 					</div>
 				</div>
+
 			</div>
 		</div>
 	</div>
