--- a/Block_Ref3.html
+++ b/Block_Ref3.html
@@ -34,337 +34,180 @@
 	<div id="Ref3-div-src">
 		<div id="id-Block_Ref3" style="scroll-margin-top: 80px;"></div>
 		<div class="ref3-body">
-			<div class="ref3-animate-line"></div>
-				<div class="ref3-header">
-					<div class="ref4-line-with-img">
-					<h2 lang-code="07017">.Všeobecné strojárstvo</h2>
+			<div class="ref3-header">
+				<div class="ref3-line-with-img">
+					<div>
+						<h2 lang-code="07017">.Všeobecné strojárstvo</h2>
+						<p lang-code="07018">.Jednoúčelové zariadenia a technologické celky na mieru</p>
+					</div>
 					<img src="media/IkonaObrabaciehoStroja.png" alt="Ikona obrabacieho stroja">
 				</div>
-				<p lang-code="07018">.Jednoúčelové zariadenia a technologické celky na mieru</p>
 			</div>
-			<div class="ref-ovl-grid">
+			<div class="ref3-animate-line"></div>
 
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/cat-logo-transp.png" alt="CAT logo" class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">.Realizované služby:</strong></p>
-							<p>strojárstvo</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">CAT</div>
+			<div class="ref3-content-flex">
+				<div class="ref3-left">
+					<div class="ref3-left-group ">
+						<img src="media/futuristic-technology-concept.avif" class="ref3-img1" />
+						<img src="media/KonstrukciaOkruhla.png" class="ref3-img2" />
+						<img src="media/KonstrukciaObdlznikova.png" class="ref3-img3" />
+						<!-- <img src="media/KonstrukciaOkruhla.png" class="ref3-img1" />
+						<img src="media/KonstrukciaObdlznikova.png" class="ref3-img2" /> -->
 					</div>
 				</div>
 
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/daikin-logo-modra.png" alt="DAIKIN logo" class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>klimatizačné jednotky</p>
+				<div class="ref3-divider"></div>
+
+				<!-- ************************************************************************ -->
+				<div class="ref3-right">
+					<div class="ref-ovl-grid columns-3">
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/cat-logo-transp.png" alt="CAT logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">.Realizované služby:</strong></p>
+									<p>strojárstvo</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">CAT</div>
+							</div>
+						</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/daikin-logo-modra.png" alt="DAIKIN logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>klimatizačné jednotky</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">DAIKIN INDUSTRIES</div>
+							</div>
+						</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/hestego-logo-enitech.png" alt="HESTEGO logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>plechové komponenty</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">HESTEGO</div>
+							</div>
+						</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/honeywell-logo-enitech.png" alt="Honeywell logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>turbodúchadlá</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">Honeywell</div>
+							</div>
+						</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/chropynska-logo-transp.png" alt="CHROPYNSKA logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>CAD development design</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">Chropynska</div>
+							</div>
+						</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/konstrukta-logo-enitech.png" alt="Konstrukta logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>výrobné zariadenia pre gumárenský priemysel</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">KONŠTRUKTA</div>
+							</div>
+						</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/krauss-maffei-logo-enitech.png" alt="KraussMaffei logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>stroje na výrobu plastových komponentov</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">KraussMaffei</div>
+							</div>
+						</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/mce-logo-transp.png" alt="MCE logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>steel structures and plant engineering</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">MCE part of the family HABAU GROUP</div>
+							</div>
+						</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/schindler-logo-enitech.png" alt="Schindler logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">.Realizované služby:</strong></p>
+									<p>výťahy a eskalátory</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">Schindler</div>
+							</div>
+						</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/skoda-logo-enitech.png" alt="Skoda logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>zváracie a polohovacie prípravky</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">Škoda Auto</div>
+							</div>
+						</div>
+
+						<div class="ref-ovl-item-wrap">
+							<div class="ref-ovl-item">
+								<img src="media/klienti/tagueri-logo-transp.png" alt="Tagueri logo" class="ref-ovl-image" />
+								<div class="ref-ovl-overlay">
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
+									<p>Poradenstvo a technológie</p>
+								</div>
+							</div>
+							<div class="ref-ovl-company-item">
+								<div class="ref-ovl-company">Tagueri</div>
+							</div>
 						</div>
 					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">DAIKIN INDUSTRIES</div>
+					<div style="text-align: right;">
+						<a href="#id_refMenu" lang-code="07020">Späť k menu</a>
 					</div>
 				</div>
-
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/hestego-logo-enitech.png" alt="HESTEGO logo" class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>plechové komponenty</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">HESTEGO</div>
-					</div>
-				</div>
-
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/honeywell-logo-enitech.png" alt="Honeywell logo"
-							class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>turbodúchadlá</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">Honeywell</div>
-					</div>
-				</div>
-
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/chropynska-logo-transp.png" alt="CHROPYNSKA logo"
-							class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>CAD development design</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">Chropynska</div>
-					</div>
-				</div>
-
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/konstrukta-logo-enitech.png" alt="Konstrukta logo"
-							class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>výrobné zariadenia pre gumárenský priemysel</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">KONŠTRUKTA</div>
-					</div>
-				</div>
-
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/krauss-maffei-logo-enitech.png" alt="KraussMaffei logo"
-							class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>stroje na výrobu plastových komponentov</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">KraussMaffei</div>
-					</div>
-				</div>
-
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/mce-logo-transp.png" alt="MCE logo" class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>steel structures and plant engineering</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">MCE part of the family HABAU GROUP</div>
-					</div>
-				</div>
-
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/schindler-logo-enitech.png" alt="Schindler logo"
-							class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">.Realizované služby:</strong></p>
-							<p>výťahy a eskalátory</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">Schindler</div>
-					</div>
-				</div>
-
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/skoda-logo-enitech.png" alt="Skoda logo" class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>zváracie a polohovacie prípravky</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">Škoda Auto</div>
-					</div>
-				</div>
-
-				<div class="ref-ovl-item-wrap">
-					<div class="ref-ovl-item">
-						<img src="media/klienti/tagueri-logo-transp.png" alt="Tagueri logo" class="ref-ovl-image" />
-						<div class="ref-ovl-overlay">
-							<p><strong lang-code="07005">Realizované služby:</strong></p>
-							<p>Beratung und Technologie</p>
-						</div>
-					</div>
-					<div class="ref-ovl-company-item">
-						<div class="ref-ovl-company">Tagueri</div>
-					</div>
-				</div>
-
-
-
-
-
-				<!-- <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/airbus-logo-enitech.png" alt="Airbus logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>interiérové komponenty lietadiel</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">AIRBUS</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/magna-steyr-logo-enitech.png" alt="Magna steyr logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>podvozky a prevodové ústrojenstvo</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Magna Steyr</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/tms-logo-enitech.png" alt="TMS logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>výrobné zariadenia pre automobilový priemysel</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">TMS - Turnkey manufacturing systems</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/kuka-logo-enitech.png" alt="KUKA logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>robotické systémy</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">KUKA</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/atos-logo-enitech.png" alt="Atos logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>software pre automobilový priemysel</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Atos</div>
-          </div>
-        </div>
-
-		<div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/edag-logo-enitech.png" alt="EDAG logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>vývoj automobilových komponentov</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">EDAG</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/bmw-logo-enitech.png" alt="BMW logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>zváracie a polohovacie prípravky</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">BMW</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/audi-logo-enitech.png" alt="Audi logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>zváracie a polohovacie prípravky</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Audi</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/siemens-logo-enitech.png" alt="SIEMENS logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>software pre letecký a kozmický priemysel </p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">SIEMENS</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/active-solution-logo-enitech.png" alt="Active Solution logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>vývoj softwaru pre rôzne oblasti</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Active Solution</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/raiffeisen-bank-logo-enitech.png" alt="Reiffeisen logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>software v oblasti bankovníctva</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">Reiffeisen</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/cellent-logo-enitech-1.png" alt="CELLENT logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>software v oblasti bankovníctva</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">CELLENT</div>
-          </div>
-        </div>
-
-        <div class="ref-ovl-item-wrap">
-          <div class="ref-ovl-item">
-            <img src="media/klienti/brz-logo-enitech.png" alt="BRZ logo" class="ref-ovl-image" />
-            <div class="ref-ovl-overlay">
-              <p><strong lang-code="07005">Realizované služby:</strong></p>
-              <p>vývoj softwaru pre Rakúsku štátnu správu</p>
-            </div>
-          </div>
-          <div class="ref-ovl-company-item">
-            <div class="ref-ovl-company">BRZ - Bundesrechenzentrum</div>
-          </div>
-        </div> -->
-
 			</div>
 		</div>
 	</div>
