--- a/indexKontakt.html
+++ b/indexKontakt.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="animator.css">
   <link rel="stylesheet" href="menu.css">
   <link rel="stylesheet" href="kontakt1.css">
+  <link rel="stylesheet" href="formular.css">  
   <link rel="stylesheet" href="kontakt2.css">
   <link rel="stylesheet" href="kontakt3.css">
   <link rel="stylesheet" href="footer.css">
