--- a/Block_Kontakt1.html
+++ b/Block_Kontakt1.html
@@ -1,127 +1,130 @@
 <!DOCTYPE html>
 <html lang="sk">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Block_Kontakt1.html</title>
-  <link rel="icon" href="favicona-enitech.png">
-  <link rel="stylesheet" href="fonts-poppins.css" />
-  <link rel="stylesheet" href="fonts-open-sans.css">
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Block_Kontakt1.html</title>
+	<link rel="icon" href="favicona-enitech.png">
+	<link rel="stylesheet" href="fonts-poppins.css" />
+	<link rel="stylesheet" href="fonts-open-sans.css">
 
-  <link rel="stylesheet" href="root.css">
-  <link rel="stylesheet" href="animator.css">
-  <link rel="stylesheet" href="menu.css">
-  <link rel="stylesheet" href="kontakt1.css">
+	<link rel="stylesheet" href="root.css">
+	<link rel="stylesheet" href="animator.css">
+	<link rel="stylesheet" href="menu.css">
+	<link rel="stylesheet" href="kontakt1.css">
+	<link rel="stylesheet" href="formular.css">
 
-  <!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalosou DOMContentLoaded-->
-  <script src="menu.js" defer></script>
-  <script src="Language.js" defer></script>
-  <script src="animator.js" defer></script>
+	<!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalosou DOMContentLoaded-->
+	<script src="menu.js" defer></script>
+	<script src="Language.js" defer></script>
+	<script src="animator.js" defer></script>
 </head>
+
 <body>
-  <div id="Menu-div-dst">
-  </div>
+	<div id="Menu-div-dst">
+	</div>
 
-  <div id="Kontakt1-div-src">
-    <div class="kontakt1-body">    
-      <!-- Horná čierna časť -->
-      <div class="kontakt1-top">
-        <div class="kontakt1-top-left">
-          <div id="id-kontakt1-animate-content"> <!-- style="transform-style: preserve-3d; transform: rotateX(-90deg) rotateY(10deg);"> -->
-            <h1 lang-code="05001">Kontaktujte nás</h1>
-            <p lang-code="05002">
-              NAPÍŠTE NÁM V PRÍPADE OTÁZOK ALEBO NÁM DAJTE SPÄTNÚ VÄZBU NA NAŠE PRODUKTY. 
-              VYPLŇTE FORMULÁR A MY VÁM ODPOVIEME ČO NAJSKÔR.
-            </p>
-          </div>
-        </div>
-        <div class="kontakt1-top-right"></div>
-      </div>
+	<div id="Kontakt1-div-src">
+		<div class="kontakt1-body">
+			<!-- Horná čierna časť -->
+			<div class="kontakt1-top">
+				<div class="kontakt1-top-left">
+					<div id="id-kontakt1-animate-content"> <!-- style="transform-style: preserve-3d; transform: rotateX(-90deg) rotateY(10deg);"> -->
+						<h1 lang-code="05001">Kontaktujte nás</h1>
+						<p lang-code="05002">
+							NAPÍŠTE NÁM V PRÍPADE OTÁZOK ALEBO NÁM DAJTE SPÄTNÚ VÄZBU NA NAŠE PRODUKTY.
+							VYPLŇTE FORMULÁR A MY VÁM ODPOVIEME ČO NAJSKÔR.
+						</p>
+					</div>
+				</div>
+				<div class="kontakt1-top-right"></div>
+			</div>
 
-      <!-- Spodná časť s pozadím -->
-      <div class="kontakt1-bottom"  style="background-image: url('media/close-up-person-working-call-center.avif');">
-        <div class="kontakt1-form-wrapper">
-          <form id="id-kontakt1-form">
-            <div class="kontakt1-form">
-                <div class="kontakt1-form-group">
-                  <label for="id-kontakt1-meno" lang-code="05011">Krstné meno *</label>
-                  <input type="text" id="id-kontakt1-meno" required />
-                </div>
+			<!-- Spodná časť s pozadim a formularom -->
+			<div class="kontakt1-bottom" style="background-image: url('media/close-up-person-working-call-center.avif');">
+				<div class="kontakt1-form-wrapper">
+					<div class="formular-wrapper">
+						<form id="id-kontakt1-form">
+							<div class="formular-grid">
+								<div class="formular-group">
+									<label for="id-kontakt1-meno" lang-code="05011">Krstné meno *</label>
+									<input type="text" id="id-kontakt1-meno" required />
+								</div>
 
-                <div class="kontakt1-form-group">
-                  <label for="id-kontakt1-priezvisko" lang-code="05012">Priezvisko *</label>
-                  <input type="text" id="id-kontakt1-priezvisko" required />
-                </div>
+								<div class="formular-group">
+									<label for="id-kontakt1-priezvisko" lang-code="05012">Priezvisko *</label>
+									<input type="text" id="id-kontakt1-priezvisko" required />
+								</div>
 
-                <div class="kontakt1-form-group">
-                  <label for="id-kontakt1-telefon" lang-code="05013">Telefónne číslo *</label>
-                  <input type="tel" id="id-kontakt1-telefon" required pattern="^(\+421|0)\s?\d{3}\s?\d{3}\s?\d{3}$"
-                  title="Tel.cislo v tvare: +421 911 123 456 alebo 0911 123 456" />
-                </div>
+								<div class="formular-group">
+									<label for="id-kontakt1-telefon" lang-code="05013">Telefónne číslo *</label>
+									<input type="tel" id="id-kontakt1-telefon" required pattern="^(\+421|0)\s?\d{3}\s?\d{3}\s?\d{3}$" title="Tel.cislo v tvare: +421 911 123 456 alebo 0911 123 456" />
+								</div>
 
-                <div class="kontakt1-form-group">
-                  <label for="id-kontakt1-email" lang-code="05014">Email *</label>
-                  <input type="email" id="id-kontakt1-email" required />
-                </div>
+								<div class="formular-group">
+									<label for="id-kontakt1-email" lang-code="05014">Email *</label>
+									<input type="email" id="id-kontakt1-email" required />
+								</div>
 
-                <div class="kontakt1-form-group span2">
-                  <label for="id-kontakt1-predmet" lang-code="05015">Predmet správy</label>
-                  <input type="text" id="id-kontakt1-predmet" />
-                </div>
+								<div class="formular-group span2">
+									<label for="id-kontakt1-predmet" lang-code="05015">Predmet správy</label>
+									<input type="text" id="id-kontakt1-predmet" />
+								</div>
 
-                <div class="kontakt1-form-group span2">
-                  <label for="id-kontakt1-sprava" lang-code="05016">Správa</label>
-                  <textarea id="id-kontakt1-sprava"></textarea>
-                </div>
-            </div>
-            <div class="kontakt1-form-checkbox">
-              <input type="checkbox" id="id-kontakt1-suhlas" required />
-              <label for="id-kontakt1-suhlas">
-                  <a href="#" lang-code="05017">Súhlasím so spracovaním mojich osobných údajov za účelom spätnej väzby na Vašu správu.</a>
-              </label>
-            </div>
+								<div class="formular-group span2">
+									<label for="id-kontakt1-sprava" lang-code="05016">Správa</label>
+									<textarea id="id-kontakt1-sprava"></textarea>
+								</div>
+							</div>
+							<div class="formular-checkbox">
+								<input type="checkbox" id="id-kontakt1-suhlas" required />
+								<label for="id-kontakt1-suhlas">
+									<span class="formular-text-underline" lang-code="05017">Súhlasím so spracovaním mojich osobných údajov za účelom spätnej väzby na moju správu.</span>
+								</label>
+							</div>
 
-            <div class="kontakt1-form-checkbox" id="id-kontakt1-captcha-container">
-              <input type="checkbox" id="id-kontakt1-captcha" required onclick="return false;" />
-              <label for="id-kontakt1-captcha" lang-code="05018">Nie som robot</label>
-              <div class="kontakt1-spinner" id="id-kontakt1-spinner"></div>
-            </div>
+							<div class="formular-checkbox" id="id-kontakt1-captcha-container">
+								<input type="checkbox" id="id-kontakt1-captcha" class="formular-captcha" required onclick="return false;" />
+								<label for="id-kontakt1-captcha" class="formular-captcha" lang-code="05018">Nie som robot</label>
+								<div class="formular-spinner" id="id-kontakt1-spinner"></div>
+							</div>
 
-            <div class="kontakt1-form-checkbox">
-              <button type="submit" class="kontakt1-submit-btn" lang-code="05019">SEND MESSAGE</button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-    <!-- Dialogové okno -->
-    <div class="kontakt1-overlay" id="id-kontakt1-overlay">
-      <div class="kontakt1-dialog" id="id-kontakt1-dialog">
-        <p lang-code="05020">Správa bola úspešne odoslaná</p>
-        <button onclick="kontakt1_closeDialog()">OK</button>
-      </div>
-    </div>
-  </div>
+							<div class="formular-checkbox">
+								<button type="submit" class="formular-submit-btn" lang-code="05019">SEND MESSAGE</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- Dialogové okno -->
+		<div class="formular-dialog-overlay" id="id-kontakt1-overlay">
+			<div class="formular-dialog" id="id-kontakt1-dialog">
+				<p lang-code="05020">Správa by bola úspešne odoslaná</p>
+				<button onclick="kontakt1_closeDialog()">OK</button>
+			</div>
+		</div>
+	</div>
 
-  <script src="ImportBlock.js" type="text/javascript"></script>  <!-- funkcie js: importovanie blokov -->
-  <script src="kontakt1.js" type="text/javascript"></script>
+	<script src="ImportBlock.js" type="text/javascript"></script>
+	<script src="kontakt1.js" type="text/javascript"></script>
 
-  <script>
-  </script>
-  <script>
-    document.addEventListener("DOMContentLoaded", async () => {
-      await ImportDiv  ("Block_Menu.html", "Menu-div-src", "Menu-div-dst");
-      await new Promise(requestAnimationFrame);
-      // Načítanie prekladov po načítaní DOM
-      await LoadTranslations('translations00.txt');
-      await LoadTranslations('translations05-kontakt.txt');
-      await UpdateTexts();
-      await new Promise(requestAnimationFrame);
+	<script>
+		document.addEventListener("DOMContentLoaded", async () => {
+			await ImportDiv("Block_Menu.html", "Menu-div-src", "Menu-div-dst");
+			await new Promise(requestAnimationFrame);
+			// Načítanie prekladov po načítaní DOM
+			await LoadTranslations('translations00.txt');
+			await LoadTranslations('translations05-kontakt.txt');
+			await UpdateTexts();
+			await new Promise(requestAnimationFrame);
 
-      await kontakt1_addEventListeners();
-      Animator.register("#id-kontakt1-animate-content", "animate-slide-in-bounce"); // "animate-rotateFlipIn");
-      document.body.style.visibility = "visible"; // zobraz stránku až teraz    
-    });
-  </script>
+			await kontakt1_addEventListeners();
+			Animator.register("#id-kontakt1-animate-content", "animate-slide-in-bounce"); // "animate-rotateFlipIn");
+			document.body.style.visibility = "visible"; // zobraz stránku až teraz    
+		});
+	</script>
 </body>
+
 </html>
