--- a/Block_Ref1.html
+++ b/Block_Ref1.html
@@ -65,7 +65,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/audi-logo-enitech.png" alt="Audi logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>zváracie a polohovacie prípravky</p>
 								</div>
 							</div>
@@ -78,7 +78,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/bmw-logo-enitech.png" alt="BMW logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>zváracie a polohovacie prípravky</p>
 								</div>
 							</div>
@@ -91,7 +91,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/edag-logo-enitech.png" alt="EDAG logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>vývoj automobilových komponentov</p>
 								</div>
 							</div>
@@ -104,7 +104,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/magna-steyr-logo-enitech.png" alt="Magna steyr logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>podvozky a prevodové ústrojenstvo</p>
 								</div>
 							</div>
@@ -117,7 +117,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/tms-logo-enitech.png" alt="TMS logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>výrobné zariadenia pre automobilový priemysel</p>
 								</div>
 							</div>
@@ -130,7 +130,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/audi-logo-enitech.png" alt="Audi logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>zváracie a polohovacie prípravky</p>
 								</div>
 							</div>
@@ -143,7 +143,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/ford-logo-transp.png" alt="Ford logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>automobilový priemysel</p>
 								</div>
 							</div>
@@ -156,7 +156,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/honda-logo-transp.png" alt="Honda logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>automobilový priemysel</p>
 								</div>
 							</div>
@@ -169,7 +169,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/mercedes-benz-logo-transp.png" alt="Mercedes-Benz logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>automobilový priemysel</p>
 								</div>
 							</div>
@@ -182,7 +182,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/mini-logo-transp.png" alt="Mini logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>automobilový priemysel</p>
 								</div>
 							</div>
@@ -195,7 +195,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/porsche-logo-transp.png" alt="Porsche logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>automobilový priemysel</p>
 								</div>
 							</div>
@@ -208,7 +208,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/rolls-royce-logo-transp.png" alt="Rolls royce logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>automobilový priemysel</p>
 								</div>
 							</div>
@@ -221,7 +221,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/volkswagen-logo-transp.png" alt="Volkswagen logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>automobilový priemysel</p>
 								</div>
 							</div>
