--- a/Block_Ref2.html
+++ b/Block_Ref2.html
@@ -53,7 +53,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/airbus-logo-enitech.png" alt="Airbus logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>interiérové komponenty lietadiel</p>
 								</div>
 							</div>
@@ -66,7 +66,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/siemens-logo-enitech.png" alt="SIEMENS logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>software pre letecký a kozmický priemysel </p>
 								</div>
 							</div>
