--- a/Block_Ref4.html
+++ b/Block_Ref4.html
@@ -53,7 +53,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/active-solution-logo-enitech.png" alt="Active Solution logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>vývoj softwaru pre rôzne oblasti</p>
 								</div>
 							</div>
@@ -65,7 +65,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/agrarmarkt-logo-transp.png" alt="Agrarmarkt logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>Software pre poľnohospodárske odvetvie</p>
 								</div>
 							</div>
@@ -78,7 +78,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/atos-logo-enitech.png" alt="Atos logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>software pre riadenie výroby mikročipov</p>
 								</div>
 							</div>
@@ -91,7 +91,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/autodesk-logo-transp.png" alt="Autodesk logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>3D modeling software</p>
 								</div>
 							</div>
@@ -104,7 +104,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/brz-logo-enitech.png" alt="BRZ logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>vývoj softwaru pre Rakúsku štátnu správu</p>
 								</div>
 							</div>
@@ -117,7 +117,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/cellent-logo-transp.png" alt="CELLENT logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>software v oblasti bankovníctva</p>
 								</div>
 							</div>
@@ -130,7 +130,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/erste-logo-transp.png" alt="Erste logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>software v oblasti bankovníctva</p>
 								</div>
 							</div>
@@ -143,7 +143,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/ferchau-logo-transp.png" alt="Ferchau logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>software v oblasti strojárenstva</p>
 								</div>
 							</div>
@@ -156,7 +156,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/kuka-logo-enitech.png" alt="KUKA logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>robotické systémy</p>
 								</div>
 							</div>
@@ -169,7 +169,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/raiffeisen-bank-logo-enitech.png" alt="Reiffeisen logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>software v oblasti bankovníctva</p>
 								</div>
 							</div>
@@ -182,7 +182,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/tenovis-logo-transp.png" alt="Tenovis logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>software v oblasti telekomunikácií</p>
 								</div>
 							</div>
@@ -195,7 +195,7 @@
 							<div class="ref-ovl-item">
 								<img src="media/klienti/unisys-logo-transp.png" alt="Unisys logo" class="ref-ovl-image" />
 								<div class="ref-ovl-overlay">
-									<p><strong lang-code="07005">Realizované služby:</strong></p>
+									<p class="ref-ovl-realiz-sluzby"><strong lang-code="07005">Realizované služby:</strong></p>
 									<p>Technologické riešenia</p>
 								</div>
 							</div>
