--- a/Block_KarieraCV.html
+++ b/Block_KarieraCV.html
@@ -49,10 +49,9 @@
 				<form id="id-cv-form" onsubmit="do_cv_submit(event)">
 					<div class="formular-grid">
 						<div class="formular-group">
-							<label for="id-cv-meno" lang-code="08021">Krstné meno *</label>
+							<label for="id-cv-meno">Krstné meno *</label>
 							<input type="text" id="id-cv-meno" required />
 						</div>
-
 						<div class="formular-group">
 							<label for="id-cv-priezvisko" lang-code="08022">Priezvisko *</label>
 							<input type="text" id="id-cv-priezvisko" required />
@@ -63,7 +62,7 @@
 							<input type="tel" id="id-cv-telefon" required pattern="^(\+421|0)\s?\d{3}\s?\d{3}\s?\d{3}$" title="Tel.cislo v tvare: +421 911 123 456 alebo 0911 123 456" />
 						</div>
 
-						<div class="formular-group">
+						<div class="formular-group span2">
 							<label for="id-cv-email" lang-code="08024">Email *</label>
 							<input type="email" id="id-cv-email" required />
 						</div>
