--- a/Block_Kontakt1.html
+++ b/Block_Kontakt1.html
@@ -62,7 +62,7 @@
 									<input type="tel" id="id-kontakt1-telefon" required pattern="^(\+421|0)\s?\d{3}\s?\d{3}\s?\d{3}$" title="Tel.cislo v tvare: +421 911 123 456 alebo 0911 123 456" />
 								</div>
 
-								<div class="formular-group">
+								<div class="formular-group span2">
 									<label for="id-kontakt1-email" lang-code="05014">Email *</label>
 									<input type="email" id="id-kontakt1-email" required />
 								</div>
